# CHANGELOG

## Minor Changes - 27 january 2026 - 10:32

Add alias for icat in fish config and create get-shell script for caelestia-shell installation

## Multiples changes

- Remove screenshots from the main repo since it is no longer on this repo 

## Separed the caelestia-shell to a separate github repo (which is a fork of caelestia-dos/shell)

Now live at [xgui4:caelestia-shell](https://github.com/xgui4/caelestia-shell)

## Add new Experimental Caelestia Session - January 26

- Add a new caelestia shell desktop entry with caelestia specific pathch
- Change multiple caelestia shell config
- Add a WIP `THANKS.MD` file for credits
- Modify some caelestia `.qml` file
- Added the caelestia `shell.json` file
- Add flameshot config
- screenshot utility moved in their main config file temporaly for hyprland
- Added screenshot

## Experiement with caelestia-shell (experimentation with quickshell branch) January 26

- Add new quickshell caelestia-shell as a experimentation
- Add it dependancies in the Hyprach json files
- Update the `.gitignore`

## Better Shells Experience Tests With FreeBSD Branch Backported changes - January 25 2026 - 21h00

- Added completions for Fish and Bash for bat
- Backported changed from the FreeBSD branch to this branch for the starship
- Barported the dotfiles tools from FreeBSD
- Updated the `.profile` file
- Fixed the waybar config
- Added Quickshell and new overview feature with Quickshell

## Better Shells Experience Tests - January 25 2026 - 18h25

- Added Exa, Ugrep, Bat and replace by default their coreutils command and replace their command with alias with a g in the fish shell
- Added those pkg into the arch essentials jsons files
- Fixed some hyprland changes
- Temporaly disabled the maxisum window border color change temporaly until i fixed it for the new hyprland version

## Big Merge - Janurary 24

- See merges info

## 2026/01/19 (dev branch) - 16:00
