@@ -1,1 +1,1 @@
-Xgui4 OS - Exp. caelestia-shell (Minor Changes) - 27 january 2026 - 10:32
+Xgui4 OS - Exp. caelestia-shell (Minor Changes) - 28th Jan.
