@@ -3,7 +3,7 @@
 general {
     # more screen usage than default hyprland
     gaps_in = 5
-    gaps_out = 5
+    gaps_out = 10
 
     border_size = 2
 
