@@ -1,0 +1,7 @@
+#!/usr/bin/env bash
+
+"""COMING SOON !"""
+
+# Install the Xgui4 OS Shell
+# git clone https://github.com/xgui4/xgui4-os-shell.git xgui4-os
+
